--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,19 @@ spring:
     url: jdbc:mysql://localhost:3306/reggie?serverTimeZone=UTC
     username: root
     password: 123456
+  redis:
+    host: localhost
+    port: 6379
+    database: 0
+    #password: 123456
+    jedis:
+      pool:
+        max-active: 8
+        max-idle: 4
+        max-wait: 1ms
+        min-idle: 0
+
+
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
